@@ -1,4 +1,4 @@
-# $Id: FAQ,v 1.3 2003/10/02 09:21:08 jaco Exp $
+# $Id: FAQ,v 1.4 2003/10/02 09:55:09 jaco Exp $
 
 Q: How do I create a tiny (truly minimal) bootable Mandrake
    LiveCD?
@@ -84,11 +84,12 @@ A: Indeed. The LiveCD creation script has two options, --blocksize
 
 Q: How do I change my keyboard layout?
 A: By default the script installs a keyboard layout for en_US.
-   You can change this behaviour in two ways:
+   You can change this behaviour on the LiveCD in two ways:
 
    1. On bootup, specify "livecd keyb=<language>" at the isolinux
       prompt. For instance, "livecd keyb=en_UK" will select the
       keyboard layout as used in the UK.
    2. If you are building a specific CD which should cater for a
-      specific layout, you can edit the DEF_KEYBOARD value in the
-      mklivecd Makefile.
+      specific keyboard layout, specify '--keyboard=<language>' on
+      the mklivecd command-line to automatically add a default
+      option to the isolinux configuration.
